# AConsoleMovie

./: .gitignore  CMakeLists.txt  README.md  Test.bat
Dependencies/GoogleTest/: CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
Source/System/: Core.hpp
Source/Terminal/: CMakeLists.txt  Core.hpp  Sequencies.hpp  Session.cpp  Session.hpp
Source/Utility/: Core.hpp  String.hpp
Test/: CMakeLists.txt  Main.cpp
